--- a/index.html
+++ b/index.html
@@ -4,51 +4,77 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YourFri.day - Your Next-Gen Voice Agent Assistant</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Helvetica, Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
             color: #333333;
-            background-color: #E4007F;
+            background-color: #ffffff;
+            transition: all 0.3s ease;
+            overflow-x: hidden;
+            margin: 0;
+            padding: 2% 10%;
         }
 
         h1, h2, h3 {
-            color: #E4007F;
+            color: #fe4081;
+            text-align: center;
+            opacity: 0;
+            transform: translateY(-30px);
+            animation: fadeInUp 1s forwards 0.5s;
+        }
+
+        p, img {
+            opacity: 0;
+            transform: translateY(30px);
+            animation: fadeInUp 1s forwards 1s;
+            margin: 20px 0;
         }
 
         .highlight {
-            color: #E4007F;
+            color: #fe4081;
         }
 
         .details {
             color: #666666;
+            font-style: italic;
         }
 
         .button-link {
             all: unset;
-            font-family: Helvetica, Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
             display: inline-block;
-            max-width: 100%;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            background-color: #0445AF;
+            background-color: #fe4081;
             color: #fff;
             font-size: 20px;
             border-radius: 25px;
-            padding: 0 33px;
+            padding: 10px 33px;
             font-weight: bold;
-            height: 50px;
             cursor: pointer;
-            line-height: 50px;
             text-align: center;
-            margin: 0;
+            margin: 20px 0;
             text-decoration: none;
+            transition: transform 0.3s;
+        }
+
+        .button-link:hover {
+            transform: scale(1.05);
         }
 
         img {
-            width: 100px;
-            height: 100px;
-            margin: 10px;
+            max-width: 500px;
+            transition: transform 0.3s;
+        }
+
+        img:hover {
+            transform: scale(1.05);
+        }
+
+        @keyframes fadeInUp {
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
     </style>
 </head>
