--- a/index.html
+++ b/index.html
@@ -10,34 +10,36 @@
             font-family: 'Roboto', sans-serif;
             color: #333333;
             background-color: #ffffff;
-            transition: all 0.3s ease;
-            overflow-x: hidden;
             margin: 0;
-            padding: 2% 10%;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        h1, h2, h3, p, img, button {
+            max-width: 80%;
+            text-align: center;
+            margin: 20px 0;
+            opacity: 0;
+            transform: translateY(30px);
         }
 
         h1, h2, h3 {
             color: #fe4081;
-            text-align: center;
-            opacity: 0;
-            transform: translateY(-30px);
             animation: fadeInUp 1s forwards 0.5s;
         }
 
-        p, img {
-            opacity: 0;
-            transform: translateY(30px);
+        p {
             animation: fadeInUp 1s forwards 1s;
-            margin: 20px 0;
         }
 
-        .highlight {
-            color: #fe4081;
-        }
-
-        .details {
-            color: #666666;
-            font-style: italic;
+        img {
+            max-width: 500px;
+            transition: transform 0.3s;
+            animation: fadeInUp 1s forwards 1.5s;
         }
 
         .button-link {
@@ -51,9 +53,6 @@
             padding: 10px 33px;
             font-weight: bold;
             cursor: pointer;
-            text-align: center;
-            margin: 20px 0;
-            text-decoration: none;
             transition: transform 0.3s;
         }
 
@@ -61,12 +60,121 @@
             transform: scale(1.05);
         }
 
+        @keyframes fadeInUp {
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @media (max-width: 768px) {
+            h1, h2, h3, p, img, button {
+                max-width: 95%;
+            }
+        }
+    </style>
+</head>
+<body>
+    <h1>YourFri.day</h1>
+    <p>"You deserve your own Person, Guy, or Gal Friday. Your assistant that doesn't rest."</p>
+    <h2>🚀 Meet Your Next-Gen Voice Agent Assistant with YourFri.day! 🚀</h2>
+    
+    <h3>🌟 Here's Why YourFri.day is a Game-Changer! 🌟</h3>
+    <img src="https://i.imgur.com/YaD83cm.png" alt="Game Changer">
+    <p>🎉 FREE Voice Clone: That's right! Your voice. Your brand. Let 'YOU' answer every call.</p>
+    <img src="https://i.imgur.com/pJ4YKmb.png" alt="Your Own Voice">
+    <p>🎙 Custom Voice Design: Tailored for age, gender, tone, and personality. From a perky Gen-Z tone to a seasoned older charm, we've got you covered.</p>
+    <img src="https://i.imgur.com/FhMGiPJ.png" alt="Checklist">
+    <p class="details">Personalized voice branding for seamless integration. Custom voice design options for age, gender, tone, and personality.</p>
+
+    <h3>UNLIMITED Interactions! 📞:</h3>
+    <img src="https://i.imgur.com/d5Jh31g.png" alt="Unlimited Calls">
+    <p>No more counting calls or minutes! Be there for your customers 24/7. Always available, always ready.</p>
+    <p class="details">Say goodbye to per-call or per-minute fees. 24/7 availability ensures you're always present for your customers.</p>
+
+    <h3>Seamless Everywhere! 💼:</h3>
+    <img src="https://i.imgur.com/vMDm2jU.png" alt="Integration">
+    <p>Syncs like a dream with top booking and reservation systems. BUT WAIT, there's more! Get a chatbot agent for your website at NO additional cost! Same knowledge, same personality, just minus the voice.</p>
+    <p class="details">Effortlessly integrates with major booking and reservation platforms. Enhance your website's user experience with YourFri.day's unique knowledge and persona.</p>
+
+    <h3>✨ The Red Carpet Experience: Exclusive Onboarding ✨</h3>
+    <img src="https://i.imgur.com/FhMGiPJ.png" alt="Red Carpet">
+    <p>You're not just any client; you're THE client. Get the VIP treatment every time with YourFri.day.</p>
+    <p class="details">* Premium white-glove onboarding service. * Dedicated account manager ensures smooth and hassle-free setup. * Provide your business details, and we tailor everything to your needs.</p>
+
+    <h3>Quality Without Breaking the Bank 💰</h3>
+    <img src="https://i.imgur.com/d5Jh31g.png" alt="Quality">
+    <p>Top-tier features, without the top-tier price tag. For about 1/3 of what you'd pay a part-time receptionist, get a 24-hour receptionist that knows your business inside and out. Except for you, of course.</p>
+    <p class="details">* Competitive pricing that's a fraction of hiring human receptionists. * An AI receptionist that recalls detailed policies and intricate details faster and more accurately than any human.</p>
+
+    <h3>🔥 Ready for the YourFri.day Revolution? 🔥</h3>
+    <p>Transform your customer interactions today! Dive into a future where every call is perfect.</p>
+
+    <h3>🚀 Coming Soon: Outgoing calls and multilingual support! 🚀</h3>
+    
+    <button class="button-link" data-tf-popup="Hx6k2Myp" data-tf-opacity="100" data-tf-size="100" data-tf-iframe-props="title=Experience YourFri.day" data-tf-transitive-search-params data-tf-medium="snippet">Try YourFri.day!</button>
+    <script src="//embed.typeform.com/next/embed.js"></script>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>YourFri.day - Your Next-Gen Voice Agent Assistant</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            color: #333333;
+            background-color: #ffffff;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+
+        h1, h2, h3, p, img, button {
+            max-width: 80%;
+            text-align: center;
+            margin: 20px 0;
+            opacity: 0;
+            transform: translateY(30px);
+        }
+
+        h1, h2, h3 {
+            color: #fe4081;
+            animation: fadeInUp 1s forwards 0.5s;
+        }
+
+        p {
+            animation: fadeInUp 1s forwards 1s;
+        }
+
         img {
             max-width: 500px;
             transition: transform 0.3s;
+            animation: fadeInUp 1s forwards 1.5s;
         }
 
-        img:hover {
+        .button-link {
+            all: unset;
+            font-family: 'Roboto', sans-serif;
+            display: inline-block;
+            background-color: #fe4081;
+            color: #fff;
+            font-size: 20px;
+            border-radius: 25px;
+            padding: 10px 33px;
+            font-weight: bold;
+            cursor: pointer;
+            transition: transform 0.3s;
+        }
+
+        .button-link:hover {
             transform: scale(1.05);
         }
 
@@ -74,6 +182,12 @@
             to {
                 opacity: 1;
                 transform: translateY(0);
+            }
+        }
+
+        @media (max-width: 768px) {
+            h1, h2, h3, p, img, button {
+                max-width: 95%;
             }
         }
     </style>
