--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YourFri.day - Your Next-Gen Voice Agent Assistant</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://s3.us-east-1.amazonaws.com/chat.agent4.ai/chatbot.css" rel="stylesheet"/>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -18,6 +19,7 @@
             justify-content: center;
             height: 100%;
             overflow-x: hidden;
+            padding-bottom: 50px; /* Healthy margin at the bottom */
         }
 
         h1, h2, h3, p, img, button {
@@ -90,19 +92,35 @@
             animation-fill-mode: both;
             visibility: visible;
         }
+
+        /* Chatbot CSS */
+        .chatbot {
+            /* Add your custom chatbot styles here */
+            background-color: #f5f5f5;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Copyright */
+        footer {
+            position: absolute;
+            bottom: 10px;
+            text-align: center;
+            width: 100%;
+        }
     </style>
 </head>
 <body>
     <h1>YourFri.day</h1>
+    <img src="https://i.imgur.com/YaD83cm.png" alt="Game Changer">
     <p>"You deserve your own Person, Guy, or Gal Friday. Your assistant that doesn't rest."</p>
     <h2>🚀 Meet Your Next-Gen Voice Agent Assistant with YourFri.day! 🚀</h2>
     
     <h3>🌟 Here's Why YourFri.day is a Game-Changer! 🌟</h3>
-    <img src="https://i.imgur.com/YaD83cm.png" alt="Game Changer">
-    <p>🎉 FREE Voice Clone: That's right! Your voice. Your brand. Let 'YOU' answer every call.</p>
     <img src="https://i.imgur.com/pJ4YKmb.png" alt="Your Own Voice">
-    <p>🎙 Custom Voice Design: Tailored for age, gender, tone, and personality. From a perky Gen-Z tone to a seasoned older charm, we've got you covered.</p>
+    <p>🎉 FREE Voice Clone: That's right! Your voice. Your brand. Let 'YOU' answer every call.</p>
     <img src="https://i.imgur.com/FhMGiPJ.png" alt="Checklist">
+    <p>🎙 Custom Voice Design: Tailored for age, gender, tone, and personality. From a perky Gen-Z tone to a seasoned older charm, we've got you covered.</p>
     <p class="details">Personalized voice branding for seamless integration. Custom voice design options for age, gender, tone, and personality.</p>
 
     <h3>UNLIMITED Interactions! 📞:</h3>
@@ -125,33 +143,9 @@
     <p>Top-tier features, without the top-tier price tag. For about 1/3 of what you'd pay a part-time receptionist, get a 24-hour receptionist that knows your business inside and out. Except for you, of course.</p>
     <p class="details">* Competitive pricing that's a fraction of hiring human receptionists. * An AI receptionist that recalls detailed policies and intricate details faster and more accurately than any human.</p>
 
-    <h3>🔥 Ready for the YourFri.day Revolution? 🔥</h3>
-    <p>Transform your customer interactions today! Dive into a future where every call is perfect.</p>
+    <footer>© 2023 YourFri.day</footer>
 
-    <h3>🚀 Coming Soon: Outgoing calls and multilingual support! 🚀</h3>
-    
-    <button class="button-link" data-tf-popup="Hx6k2Myp" data-tf-opacity="100" data-tf-size="100" data-tf-iframe-props="title=Experience YourFri.day" data-tf-transitive-search-params data-tf-medium="snippet">Try YourFri.day!</button>
-    <script src="//embed.typeform.com/next/embed.js"></script>
-    <script>
-        // Lazy loading on scroll
-        document.addEventListener('DOMContentLoaded', function() {
-            let animatedElements = document.querySelectorAll('h1, h2, h3, p, img, button');
-
-            function checkPosition() {
-                for (let i = 0; i < animatedElements.length; i++) {
-                    let element = animatedElements[i];
-                    let positionFromTop = element.getBoundingClientRect().top;
-
-                    if (positionFromTop - window.innerHeight <= 0) {
-                        element.classList.add('scroll-animate');
-                    }
-                }
-            }
-
-            window.addEventListener('scroll', checkPosition);
-            window.addEventListener('resize', checkPosition);
-            checkPosition();
-        });
-    </script>
+    <!-- Chatbot script (placed in an obvious location for easy disabling) -->
+    <script src="https://app.agent4.ai/chatjs/NGE5YjA4MDAtM2NhNC0xMHVlLTkyOTItMGE1OGE5ZmVhYzAy/"></script>
 </body>
 </html>
