--- a/index.html
+++ b/index.html
@@ -3,173 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <script src="https://app.agent4.ai/chatjs/NGE5YjA4MDAtM2NhNC0xMHVlLTkyOTItMGE1OGE5ZmVhYzAy/"></script>
+    <title>YourFri.day - Your Next-Gen Voice Agent Assistant</title>
     <style>
         body {
-            font-family: 'Roboto', sans-serif;
+            font-family: Helvetica, Arial, sans-serif;
             color: #333333;
-            background-color: #ffffff;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding-bottom: 50px;
-        }
-
-        h1, h2, h3, p, img, button {
-            max-width: 80%;
-            text-align: center;
-            margin: 20px 0;
-            opacity: 0;
-            transform: translateY(30px);
-            transition: all 1s;
-            visibility: hidden;
+            background-color: #E4007F;
         }
 
         h1, h2, h3 {
-            color: #fe4081;
-            background: linear-gradient(to right, black, gray);
-            padding: 10px;
-            border-radius: 5px;
+            color: #E4007F;
         }
 
-        p {
-            transition-delay: 0.2s;
+        .highlight {
+            color: #E4007F;
         }
 
-        img {
-            max-width: 500px;
-            transition: transform 0.3s;
-            transition-delay: 0.4s;
+        .details {
+            color: #666666;
         }
 
         .button-link {
             all: unset;
-            font-family: 'Roboto', sans-serif;
+            font-family: Helvetica, Arial, sans-serif;
             display: inline-block;
-            background-color: #fe4081;
+            max-width: 100%;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            background-color: #0445AF;
             color: #fff;
             font-size: 20px;
             border-radius: 25px;
-            padding: 10px 33px;
+            padding: 0 33px;
             font-weight: bold;
+            height: 50px;
             cursor: pointer;
-            transition: transform 0.3s;
-        }
-
-        .button-link:hover {
-            transform: scale(1.05);
-        }
-
-        @media (max-width: 768px) {
-            h1, h2, h3, p, img, button {
-                max-width: 95%;
-            }
-        }
-
-        /* Scroll animations */
-        @keyframes slideInFromBottom {
-            0% {
-                transform: translateY(10%);
-                opacity: 0;
-            }
-            100% {
-                transform: translateY(0);
-                opacity: 1;
-            }
-        }
-
-        .scroll-animate {
-            opacity: 0;
-            transform: translateY(10%);
-            animation: slideInFromBottom 1s forwards;
-            animation-fill-mode: both;
-            visibility: visible;
-        }
-
-        /* Chatbot CSS */
-        .chat-icon {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            cursor: pointer;
-            z-index: 999;
-        }
-
-        .chat-icon-circle {
-            width: 60px;
-            height: 60px;
-            background-color: #fe4081;
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: #fff;
-            font-weight: bold;
-            font-size: 18px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-            transition: background-color 0.3s ease;
-        }
-
-        .chat-icon:hover .chat-icon-circle {
-            background-color: #d5366d;
-        }
-
-        .chat-icon-text {
-            pointer-events: none;
-        }
-
-        /* Copyright */
-        footer {
-            position: absolute;
-            bottom: 10px;
+            line-height: 50px;
             text-align: center;
-            width: 100%;
+            margin: 0;
+            text-decoration: none;
+        }
+
+        img {
+            width: 100px;
+            height: 100px;
+            margin: 10px;
         }
     </style>
 </head>
 <body>
     <h1>YourFri.day</h1>
-    <img src="https://i.imgur.com/YaD83cm.png" alt="Game Changer">
     <p>"You deserve your own Person, Guy, or Gal Friday. Your assistant that doesn't rest."</p>
     <h2>🚀 Meet Your Next-Gen Voice Agent Assistant with YourFri.day! 🚀</h2>
     
     <h3>🌟 Here's Why YourFri.day is a Game-Changer! 🌟</h3>
-    <img src="https://i.imgur.com/pJ4YKmb.png" alt="Your Own Voice">
+    <img src="https://i.imgur.com/YaD83cm.png" alt="Game Changer Clipart">
     <p>🎉 FREE Voice Clone: That's right! Your voice. Your brand. Let 'YOU' answer every call.</p>
-    <img src="https://i.imgur.com/FhMGiPJ.png" alt="Checklist">
     <p>🎙 Custom Voice Design: Tailored for age, gender, tone, and personality. From a perky Gen-Z tone to a seasoned older charm, we've got you covered.</p>
     <p class="details">Personalized voice branding for seamless integration. Custom voice design options for age, gender, tone, and personality.</p>
 
     <h3>UNLIMITED Interactions! 📞:</h3>
-    <img src="https://i.imgur.com/d5Jh31g.png" alt="Unlimited Calls">
+    <img src="https://i.imgur.com/pJ4YKmb.png" alt="Unlimited Calls Clipart">
     <p>No more counting calls or minutes! Be there for your customers 24/7. Always available, always ready.</p>
     <p class="details">Say goodbye to per-call or per-minute fees. 24/7 availability ensures you're always present for your customers.</p>
 
     <h3>Seamless Everywhere! 💼:</h3>
-    <img src="https://i.imgur.com/vMDm2jU.png" alt="Integration">
+    <img src="https://i.imgur.com/FhMGiPJ.png" alt="Integration Clipart">
     <p>Syncs like a dream with top booking and reservation systems. BUT WAIT, there's more! Get a chatbot agent for your website at NO additional cost! Same knowledge, same personality, just minus the voice.</p>
     <p class="details">Effortlessly integrates with major booking and reservation platforms. Enhance your website's user experience with YourFri.day's unique knowledge and persona.</p>
 
     <h3>✨ The Red Carpet Experience: Exclusive Onboarding ✨</h3>
-    <img src="https://i.imgur.com/FhMGiPJ.png" alt="Red Carpet">
+    <img src="https://i.imgur.com/d5Jh31g.png" alt="Red Carpet Clipart">
     <p>You're not just any client; you're THE client. Get the VIP treatment every time with YourFri.day.</p>
     <p class="details">* Premium white-glove onboarding service. * Dedicated account manager ensures smooth and hassle-free setup. * Provide your business details, and we tailor everything to your needs.</p>
 
     <h3>Quality Without Breaking the Bank 💰</h3>
-    <img src="https://i.imgur.com/d5Jh31g.png" alt="Quality">
+    <img src="https://i.imgur.com/vMDm2jU.png" alt="Quality Clipart">
     <p>Top-tier features, without the top-tier price tag. For about 1/3 of what you'd pay a part-time receptionist, get a 24-hour receptionist that knows your business inside and out. Except for you, of course.</p>
     <p class="details">* Competitive pricing that's a fraction of hiring human receptionists. * An AI receptionist that recalls detailed policies and intricate details faster and more accurately than any human.</p>
 
-    <footer>© 2023 YourFri.day</footer>
+    <h3>🔥 Ready for the YourFri.day Revolution? 🔥</h3>
+    <p>Transform your customer interactions today! Dive into a future where every call is perfect.</p>
 
-    <!-- Chatbot icon -->
-    <div class="chat-icon" id="chat-icon">
-        <div class="chat-icon-circle">
-            <span class="chat-icon-text">Chat</span>
-        </div>
-    </div>
+    <h3>🚀 Coming Soon: Outgoing calls and multilingual support! 🚀</h3>
+    
+    <button class="button-link" data-tf-popup="Hx6k2Myp" data-tf-opacity="100" data-tf-size="100" data-tf-iframe-props="title=Experience YourFri.day" data-tf-transitive-search-params data-tf-medium="snippet">Try YourFri.day!</button>
+    <script src="//embed.typeform.com/next/embed.js"></script>
 </body>
 </html>
